--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ main {
   flex-direction: column;
   align-items: center;
   border-radius: 10px;
-  padding: 15px;
+  padding: 40px;
 }
 
 .container {
@@ -41,13 +41,13 @@ main {
   border-radius: 50%;
   width: 88px;
   height: 88px;
-  margin: 25px;
 }
 
 .info h1 {
   font-size: 1.7em;
   letter-spacing: 1px;
   font-weight: normal;
+  margin-top: 24px;
 }
 
 .info address {
@@ -58,9 +58,23 @@ main {
 }
 
 .info p {
-    padding: 27px 0 0 0 ;
+    padding: 27px 0 27px 0 ;
 }
 
 ol {
     list-style: none;
+}
+
+li {
+    background: hsl(0, 0%, 20%);
+    border-radius: 10px;
+    height: 45px;
+    margin-bottom: 16px;
+    line-height: 45px;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    letter-spacing: 0.46px;
 }
